# vehicle_evolver_deluxe

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html
.github/workflows/: rust.yml
assets/models/: TerrainRoad.glb  TerrainRoad.mtl
src/: genetics_simulator.rs  main.rs  utility.rs  vehicle.rs  vehicle_states.rs
src/plugins/: background.rs  camera.rs  genetics.rs  mod.rs  spawn_indicator.rs  terrain_mesh.rs  vehicle_manager.rs
