[package]
authors = ["Bauxitedev"]
edition = "2018"
name = "vehicle_evolver_deluxe"
version = "0.1.0"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
  "bevy_kira_audio/ogg"
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2",
]

[dependencies]
bevy = {version = "0.5.0", default-features = false}
bevy_webgl2 = {version = "0.5.0", optional = true}
getrandom = {version = "0.1", features = ["wasm-bindgen"]}
rand = "0.8.3"
winit = {version = "0.24.0" }
bevy_egui = "0.5"
bevy_prototype_lyon = "0.3.1"
bevy-inspector-egui = {version = "0.5.1", features = ["rapier2d"] }
bevy_kira_audio = "0.5.0"
crossbeam-channel = "0.5.1"
lerp = { version = "0.4", features = ["derive"] }
num = "0.4.0"
instant = "0.1.9"
bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", branch = "master", features=["enhanced-determinism"]} # fixes the crash when despawning ents with joints
ndarray = "0.15.3"
num_enum = "0.5.1"
derive-new = "0.5.9"
strum = "0.21"
strum_macros = "0.21"
dashmap = "4.0.2"
fern = "0.6.0"
log = "0.4.14"
ctor = "0.1.20"
ordered-float = "2.5.1"
colorous = "1.0.5"
console_log = "0.2.0"
web-sys = {version="0.3.46", features=["HtmlParagraphElement"]}

[dev_dependencies]
env_logger = {version="0.7.1", default-features = false }

[dependencies.chrono]
version = "0.4.19"
features = [ "wasmbind"]
